# trice

examples/CH32V30xR/: .clang-format  .gitignore  CMakeLists.txt  build.sh  package.json
examples/CH32V30xR/User/: ch32v30x_it.c  main.c
examples/CH32V30xR/cmake/: toolchain.cmake
examples/CH32V30xR/openocd/: test-wch-riscv.cfg  wch-riscv.cfg
examples/CH32V30xR_inst/: .clangd  .editorconfig  CMakeLists.txt  li.json  til.json
examples/CH32V30xR_inst/SRC/Debug/: debug.c
examples/CH32V30xR_inst/User/: ch32v30x_it.c  debug.c  debug.h  main.c  triceCheck.c  triceConfig.h  triceLogDiagData.c  triceUart.h
examples/CH32V30xR_inst/cmake/: toolchain.cmake
examples/CH32V30xR_inst/openocd/scripts/: test_openocd.py
